@@ -120,3 +120,4 @@ Changes after KPresenter 1.2
 - Now Shadow is a text properties
 - Add "copy link" feature.
 - Add "add to bookmark" feature
+- We can change "picture path"
